#carousel disappears @ 640px. reconfigured carousel projects to render in .carousel-container. .carousel-controls displays properly

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section id="websites" class="gallery"></section>    
         <section id="applications" class="hidden"></section>
         <section id="carousel">
-            <section class="carousel-container"></section>
+            <section id="carousel-container" class="carousel-container"></section>
             <section class="carousel-controls">
                 <a class="prev" onclick="changeSlide(-1)">&#10094; prev</a>
                 <div id="dot-container"></div>
