refactoring carousel & gallery. commented out html & brought in html from test project

--- a/index.html
+++ b/index.html
@@ -61,17 +61,31 @@
             <button id="app-btn" type="button">SEE APPLICATIONS</button>
         </section>
 
-        <section id="websites" class="gallery"></section>    
-        <section id="applications" class="hidden"></section>
-        <section id="carousel">
-            <section id="carousel-container" class="carousel-container"></section>
-            <section class="carousel-controls">
+        <section id="carousel-container" class="carousel-container">
+            <section id="carousel-images">carousel</section>
+
+            <section id="carousel-controls" class="carousel-controls">
                 <a class="prev" onclick="changeSlide(-1)">&#10094; prev</a>
                 <div id="dot-container"></div>
                 <a class="next" onclick="changeSlide(1)">next &#10095;</a>
             </section>
         </section>
-            
+
+        <section id="gallery-container" class="gallery-container">gallery</section>
+
+        <!-- <section id="websites" class="hidden"></section>
+
+        <section id="applications" class="hidden"></section>
+
+        <section id="carousel" class="gallery">
+            <section id="carousel-container" class="carousel-container"></section>
+
+            <section class="carousel-controls">
+                <a class="prev" onclick="changeSlide(-1)">&#10094; prev</a>
+                <div id="dot-container"></div>
+                <a class="next" onclick="changeSlide(1)">next &#10095;</a>
+            </section>
+        </section> -->
     </section>
 
     <div class="divider-1"></div>
