styling .gallery-container

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </section>
 
         <section id="carousel-container" class="carousel-container">
-            <section id="carousel-images">carousel</section>
+            <section id="carousel-images"></section>
 
             <section id="carousel-controls" class="carousel-controls">
                 <a class="prev" onclick="changeSlide(-1)">&#10094; prev</a>
@@ -71,7 +71,7 @@
             </section>
         </section>
 
-        <section id="gallery-container" class="gallery-container">gallery</section>
+        <section id="gallery-container" class="gallery-container"></section>
     </section>
 
     <div class="divider-1"></div>
