added social media icons to .contact

--- a/index.html
+++ b/index.html
@@ -177,6 +177,24 @@
                 </div>
             </form>
         </div>
+
+        <section class="social">
+            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/vish213/" title="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://github.com/vishalicious213" title="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://neophyte.home.blog/" title="Wordpress">
+                <i class="fab fa-wordpress"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/vishalicious213" title="Twitter">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="mailto:vishalicious213@gmail.com" title="Gmail">
+                <i class="fas fa-envelope"></i>
+            </a>
+        </section>
     </section>
 
     <div class="divider-3"></div>
