added href to #contact-me button in .pitch. corrected layout to anchor tag

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             <p>Let's create a web presence and digital tools that truly reflect the value of what you offer. How can I support your goals today?</p>
 
             <div class="pitch-btn-container">
-                <button id="contact-me" class="contact-button" type="button">CONTACT ME</button>
+                <a href="#contact-form">
+                    <button id="contact-me" class="contact-button" type="button">CONTACT ME</button>
+                </a>
             </div>
         </div>
     </section>
