updated #contact-me href

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Let's create a web presence and digital tools that truly reflect the value of what you offer. How can I support your goals today?</p>
 
             <div class="pitch-btn-container">
-                <a href="#contact-form">
+                <a href="#get-in-touch">
                     <button id="contact-me" class="contact-button" type="button">CONTACT ME</button>
                 </a>
             </div>
@@ -131,7 +131,7 @@
     
     <div class="container bk-about-me">
         <div class="inner-container bk-reading">
-            <h2>Get in touch</h2>
+            <h2 id="get-in-touch">Get in touch</h2>
             <p>Got some great food recommendations? I'm all ears — and taste buds!</p>
             <p>I'm also open to new clients, projects, and opportunities. If your company is looking to grow its software engineering team, let's connect!</p>
         </div>
