added /img/contact-me.svg to #contact-me button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div class="pitch-btn-container">
                 <a href="#get-in-touch">
-                    <button id="contact-me" class="contact-button" type="button">CONTACT ME</button>
+                    <button id="contact-me" class="contact-button" type="button"><img class="btn-icon" src="/img/contact-me.svg" alt="">CONTACT ME</button>
                 </a>
             </div>
         </div>
