added /img/send.svg to #contact-button

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         class='field'
                     ></textarea>
     
-                    <button id="contact-button" class="contact-button" type="submit">SEND MESSAGE</button>
+                    <button id="contact-button" class="contact-button" type="submit"><img class="btn-icon" src="/img/send.svg" alt="">SEND MESSAGE</button>
                 </div>
             </form>
         </div>
