added /img/web.svg to #web-btn

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <section class="work-buttons">
-            <button id="web-btn" type="button">SEE WEBSITES</button>
+            <button id="web-btn" type="button"><img class="btn-icon" src="/img/web.svg" alt="">SEE WEBSITES</button>
             <button id="app-btn" type="button">SEE APPLICATIONS</button>
         </section>
 
