added /img/app.svg to #app-btn

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <section class="work-buttons">
             <button id="web-btn" type="button"><img class="btn-icon" src="/img/web.svg" alt="">SEE WEBSITES</button>
-            <button id="app-btn" type="button">SEE APPLICATIONS</button>
+            <button id="app-btn" type="button"><img class="btn-icon" src="/img/app.svg" alt="">SEE APPLICATIONS</button>
         </section>
 
         <section id="carousel-container" class="carousel-container">
