added favicon to html. added files in /img/favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vish Singh - Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/788b6b1728.js" crossorigin="anonymous"></script>
