--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/vishalicious213" title="Twitter">
                 <i class="fab fa-twitter"></i>
             </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/vishalicious213.bsky.social" title="Bluesky">
+                <i class="fa-brands fa-bluesky"></i>
+            </a>
             <a target="_blank" rel="noopener noreferrer" href="mailto:vishalicious213@gmail.com" title="Gmail">
                 <i class="fas fa-envelope"></i>
             </a>
@@ -202,6 +205,9 @@
             </a>
             <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/vishalicious213" title="Twitter">
                 <i class="fab fa-twitter"></i>
+            </a>
+            <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/vishalicious213.bsky.social" title="Bluesky">
+                <i class="fa-brands fa-bluesky"></i>
             </a>
             <a target="_blank" rel="noopener noreferrer" href="mailto:vishalicious213@gmail.com" title="Gmail">
                 <i class="fas fa-envelope"></i>
